[package]
name = "diesel-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.2"
diesel = { version = "2.1.0", features = ["postgres"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors"] }
