[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.2"
base64 = "0.21.5"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
jsonwebtoken = "9.2.0"
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors"] }
